# config/swagger.json
@@ -100,12 +100,22 @@
         "description": "",
         "operationId": "debtTokenList",
         "produces": ["application/xml", "application/json"],
-        "parameters": [],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Pet object that needs to be added to the store",
+            "required": false,
+            "schema": {
+              "$ref": "#/definitions/DebtTokenListRequest"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "successful operation",
             "schema": {
-              "$ref": "#/definitions/DebtTokenList"
+              "$ref": "#/definitions/DebtTokenListResponse"
             }
           },
           "400": {
@@ -185,13 +195,13 @@
         }
       }
     },
-    "/pool/search:": {
+    "/pool/search": {
       "post": {
         "tags": ["pool"],
         "summary": "Get pool by conditions",
         "description": "",
-        "operationId": "getPoolByConditions",
-        "produces": ["application/xml", "application/json"],
+        "operationId": "",
+        "produces": ["application/json"],
         "parameters": [
           {
             "in": "body",
@@ -224,14 +234,14 @@
         "tags": ["pool"],
         "summary": "Notice Server to get pool list",
         "description": "",
-        "operationId": "PoolList",
-        "produces": ["application/xml", "application/json"],
+        "operationId": "",
+        "produces": ["application/json"],
         "parameters": [
           {
             "in": "body",
             "name": "body",
-            "required": true,
-            "description": "bsc chain id. 56->maninnet ; 97->testnet",
+            "description": "Pet object that needs to be added to the store",
+            "required": false,
             "schema": {
               "$ref": "#/definitions/PoolListRequest"
             }
@@ -239,10 +249,16 @@
         ],
         "responses": {
           "200": {
-            "description": "successful operation"
+            "description": "successful operation",
+            "schema": {
+              "$ref": "#/definitions/SearchResponse"
+            }
           },
           "400": {
-            "description": "Pool List Error"
+            "description": "Pool not found",
+            "schema": {
+              "$ref": "#/definitions/SearchError"
+            }
           }
         }
       }
@@ -251,13 +267,58 @@
   "definitions": {
     "LoginRequest": {
       "type": "object",
-      "required": ["name", "password"],
+      "required": ["chain_id"],
       "properties": {
-        "name": {
+        "chain_id": {
+          "type": "string"
+        }
+      }
+    },
+    "DebtTokenListRequest": {
+      "type": "object",
+      "required": ["chain_id"],
+      "properties": {
+        "chain_id": {
+          "type": "integer"
+        }
+      }
+    },
+    "DebtTokenListResponse": {
+      "type": "object",
+      "properties": {
+        "code": {
+          "type": "integer"
+        },
+        "message": {
           "type": "string"
         },
-        "password": {
+        "data": {
+          "type": "array",
+          "items": {
+            "$ref": "#/definitions/DebtTokenListResData"
+          }
+        }
+      }
+    },
+    "DebtTokenListData": {
+      "type": "object",
+      "properties": {
+        "items": {
+          "$ref": "#/definitions/DebtTokenListResData"
+        }
+      }
+    },
+    "DebtTokenListResData": {
+      "type": "object",
+      "properties": {
+        "symbol": {
           "type": "string"
+        },
+        "token": {
+          "type": "string"
+        },
+        "chain_id": {
+          "type": "integer"
         }
       }
     },
@@ -308,7 +369,7 @@
         "chain_id": {
           "type": "string"
         },
-        "p_name": {
+        "sp_name": {
           "type": "string"
         },
         "_spToken": {
@@ -382,27 +443,13 @@
         }
       }
     },
-    "DebtTokenList": {
-      "type": "object",
-      "properties": {
-        "code": {
-          "type": "integer"
-        },
-        "message": {
-          "type": "string"
-        },
-        "data": {
-          "$ref": "#/definitions/DebtTokenData"
-        }
-      }
-    },
     "GetMultiSignData": {
       "type": "object",
       "properties": {
         "chain_id": {
           "type": "string"
         },
-        "p_name": {
+        "sp_name": {
           "type": "string"
         },
         "_spToken": {
@@ -432,20 +479,6 @@
         }
       }
     },
-    "DebtTokenData": {
-      "type": "object",
-      "properties": {
-        "count": {
-          "type": "integer"
-        },
-        "rows": {
-          "type": "array",
-          "items": {
-            "$ref": "#/definitions/Symbol"
-          }
-        }
-      }
-    },
     "DebtTokenError": {
       "type": "object",
       "properties": {
@@ -457,25 +490,14 @@
         }
       }
     },
-    "Symbol": {
-      "type": "object",
-      "properties": {
-        "symbol": {
-          "type": "string"
-        },
-        "address": {
-          "type": "string"
-        }
-      }
-    },
     "SearchRequest": {
       "type": "object",
       "properties": {
         "chainID": {
           "type": "string"
         },
-        "poolID": {
-          "type": "integer"
+        "lend_token_symbol": {
+          "type": "string"
         },
         "state": {
           "type": "string"
@@ -565,6 +587,12 @@
           "type": "string"
         },
         "borrowToken": {
+          "type": "string"
+        },
+        "lend_token_symbol": {
+          "type": "string"
+        },
+        "borrow_token_symbol": {
           "type": "string"
         },
         "state": {
